--- a/env.example
+++ b/env.example
@@ -11,8 +11,10 @@ MAX_REQUESTS_PER_MINUTE=100
 # Cache settings
 CACHE_TTL=3600
 
-# External API keys (for future steps)
-# TMDB_API_KEY=your_tmdb_api_key_here
+# External API keys - Step 2: YouTube API Integration
+YOUTUBE_API_KEY=my_key_youtube_api
+
+# Future API keys (will be used in Steps 3-4)
 # NEWS_API_KEY=your_news_api_key_here
 # SHOPIFY_API_KEY=your_shopify_api_key_here
 
