--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ requests==2.31.0
 python-dotenv==1.0.0
 pydantic==2.8.0
 httpx==0.25.2
+google-api-python-client==2.108.0
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
