--- a/backend/env.example
+++ b/backend/env.example
@@ -1,20 +1,22 @@
-# Movie Aggregator Service Configuration
+# Movie Aggregator Service Environment Configuration
 
-# Service settings
-DEBUG=False
+# Required: YouTube API Key
+# Get your API key from: https://console.cloud.google.com/
+YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# Optional: Service Configuration
 HOST=0.0.0.0
 PORT=8000
+DEBUG=False
 
-# Rate limiting
+# Optional: YouTube API Optimization
+YOUTUBE_REQUEST_TIMEOUT=15.0
+YOUTUBE_BATCH_SIZE=50
+YOUTUBE_MAX_RESULTS=15
+
+# Optional: Rate Limiting (future feature)
 MAX_REQUESTS_PER_MINUTE=100
 
-# Cache settings
+# Optional: Caching (future feature)
 CACHE_TTL=3600
-
-# External API keys - Step 2: YouTube API Integration
-YOUTUBE_API_KEY=my_key_youtube_api
-
-# Future API keys (will be used in Steps 3-4)
-# NEWS_API_KEY=your_news_api_key_here
-# SHOPIFY_API_KEY=your_shopify_api_key_here
 
